style.css
body {
  background: linear-gradient(to right, #57557a, #18e0c2);
  text-align: center;
}

ul {
  margin-top: 3rem;
}

.done {
  text-decoration: line-through;
}

.hidedelete {
  display: none;
}

.deletebutton {
  text-decoration: none !important;
  border: 0.2rem solid darkblue;
  border-radius: 5px;
  height: 2rem;
  width: 6rem;
  background-color: #2d5986;
  color: #d9e6f2;
  font-family: 'Righteous', sans-serif;
  font-size: 1rem;
}

.deletebutton:hover {
  background-color: #79a6d2;
}

.title {
  text-align: center;
  font-family: 'ZCOOL KuaiLe', cursive;
  color: #003366;;
}

.title h1 {
  font-size: 3rem;
}

.title p {
  font-size: 2.5rem;
}

.list {
  margin: 0.5rem auto;
  width: 50%;
  text-align: center;
}

.list li {
  font-family: 'Josefin Sans', sans-serif;
  color: #003366;
  font-size: 2rem;
  list-style: none;
  width: fit-content;
  margin: 1rem auto;
}

.list li:hover {
  color: #9fbfdf;
}

#enter {
  border: 0.2rem solid darkblue;
  border-radius: 5px;
  height: 2rem;
  width: 6rem;
  background-color: #2d5986;
  color: #d9e6f2;
  font-family: 'Righteous', sans-serif;
  font-size: 1rem;
}

#enter:hover {
  background-color: #79a6d2;
}

#userinput {
  height: 2rem;
  font-size: 1rem;
  border-radius: 5px;
  background-color: #d9e6f2;
  border: 0.2rem solid lightblue; 
}


@media only screen and (max-width: 450px) {
  body {
    background-color: #d9e6f2;
  }

  .title h1 {
    font-size: 5rem;
  }

  .title p {
    font-size: 4rem;
  }

  .list {
    width: 60%;
  }

  .list li {
    font-size: 3rem;
  }
}

